@@ -1,3 +1,7 @@
+20090508 mnemogogo-0.6.1
+* Add image scaling / png conversion.
+* Fix bugs in the MnemoGoGo import and export routines.
+
 20090507 mnemogogo-0.6.0
 * Fix many bugs.
 * Remove global variables from the C library.
